--- a/projectMaster.Rmd
+++ b/projectMaster.Rmd
@@ -172,10 +172,9 @@ ggplot(some.eu.maps, aes(x = long, y = lat)) +
 
   
     # geom_text_repel(box.padding = 0.5, max.overlaps = Inf, aes(label = region), data = region.lab.data, color = "black", size = 2, hjust = 0.5) +
-    scale_fill_gradient(low = "#c1cef7", high = "#061c2b", na.value = "white")+
+    scale_fill_gradient(low = "white", high = "#2246c7", na.value = "white")+
   coord_sf(crs = "+proj=laea +lat_0=52 +lon_0=10 +x_0=4321000 +y_0=3210000 +ellps=GRS80 +units=m +no_defs ") + 
-  labs(fill = "GDP impacted") +
-  theme(panel.background = element_rect(fill = "transparent", colour = NA),  plot.background = element_rect(fill = "transparent", colour = NA))
+  labs(fill = "GDP impacted") 
   # scale_fill_viridis_d()+
   # theme_void()+
   # theme(legend.position = "none")
