--- a/projectMaster.Rmd
+++ b/projectMaster.Rmd
@@ -7,6 +7,7 @@ output: html_document
 
 # Visualisations
 
+## Data Import
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
@@ -134,6 +135,50 @@ ggplot(data = p2 %>%
 
 ```
 ```{r}
+yearlyIceMeans <- master %>% 
+  select(-reordered) %>% 
+  drop_na() %>% 
+  group_by(year, hemisphere) %>% 
+  summarise(meanEx = mean(extent)) %>% 
+  left_join(tempAnomaliesGlobal, by = c("year", "hemisphere")) %>% 
+  filter(hemisphere == "N") #Only choosing the Artic 
+
+p1 <- yearlyIceMeans %>% 
+  ggplot(aes(x = year, y=meanEx)) +
+  geom_line(aes(y = meanEx, color = hemisphere)) +
+  geom_smooth(method = lm, color="#404040",alpha=0.2,se=FALSE)+
+  scale_color_manual(values = c("#2246c7", "#1ba2ea")) +
+  theme_classic() +
+  theme(panel.grid.major.y = element_line(colour = "grey80"), legend.position = "none")+
+  
+  labs(title ="Average Artic Sea Ice Extent", y = "Extent\n(Millions of square kilometers)", x = "Year")
+
+p1
+
+```
+```{r}
+years <- c("1980", "1990", "2000", "2010", "2020")
+
+p2 <- master %>% 
+  mutate(year = factor(year)) %>% 
+  filter(hemisphere == "N") 
+
+ggplot(data = p2 %>% 
+         select(-reordered) %>% 
+         drop_na() %>% 
+         filter(year %in% years), aes(x = as.integer(month), y = extent)) +
+  geom_line(aes(colour = year)) +
+  scale_color_manual(values = c("#c1cef7", "#a1b0e3" ,"#607ce0", "#2246c7",  "#061c2b")) +
+  theme_classic() + labs(title = "Artic Sea Ice Trend since 1979", subtitle = "Comparing the start of every decade, the area of ice has been getting smaller and smaller", y = "Extent\n(Millions of square kilometers)", x=
+                           "Month") +
+  scale_x_continuous(breaks = c(1,2,3,4,5,6,7,8,9,10,11,12), labels = c("Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"))
+
+
+```
+
+
+
+```{r}
 
 
 impGDPBase <- impGDP %>% 
@@ -212,26 +257,6 @@ Melanesia",
     theme(panel.grid.major.x = element_line(colour = "grey80"), axis.text.y = element_text( size = 6)) +
     scale_x_continuous(labels = scales::percent) +
     labs(y = "", x = "")
-
-
-```
-
-
-```{r, fig.height=3, fig.width=5}
-impPopulationBase <- impPopulation %>% 
-  mutate("1 Meter" = x1_meter / country_3, "2 Meters" = x2_meter / country_3, "3 Meters" = x3_meter / country_3, "4 Meters"= x4_meter / country_3, "5 Meters" = x5_meter / country_3) %>% 
-  filter(country_1 == "VNM") %>% 
-  pivot_longer(cols = c("1 Meter", "2 Meters", "3 Meters", "4 Meters", "5 Meters"), names_to = "scenario", values_to = "popPercImp")
-
-ggplot(impPopulationBase, aes(x = popPercImp, y = fct_reorder(scenario, -popPercImp))) +
-  geom_col(fill = "grey90") +
-  theme_classic() +
-  geom_label(aes(label = scales::percent(popPercImp))) +
-   # theme(axis.title.x=element_blank(),
-   #      axis.text.x=element_blank(),
-   #      axis.ticks.x=element_blank())+
-  labs(y = "SLR Scenario") +
-  xlim(0,1)
 
 
 ```
@@ -324,15 +349,16 @@ impGDPUpdated <- impGDP %>%
   filter(takeYN == "Y") %>% 
   ungroup() %>% 
   left_join(isoContinent[, c("country_1", "cont", "sub_region")], by = "country_1") %>% 
-  mutate(sub_region = factor(sub_region, levels = c("Eastern Asia", "Latin America and the Caribbean", "Northern Africa", "South-eastern Asia", "Sub-Saharan Africa", "Western Asia")), order = if_else(sub_region == "Latin America and the Caribbean", "A", if_else(sub_region == "South-eastern Asia", "B", if_else(sub_region == "Sub-Saharan Africa", "C", "o")))) 
+  mutate(sub_region = factor(sub_region, levels = c("Eastern Asia", "Latin America and the Caribbean", "Northern Africa", "South-eastern Asia", "Sub-Saharan Africa", "Western Asia")), order = if_else(sub_region == "Latin America and the Caribbean", "A", if_else(sub_region == "South-eastern Asia", "B", if_else(sub_region == "Sub-Saharan Africa", "C", "o"))), country_2 = if_else(country_1 == "MMR", "Myanmar", country_2)) 
 
 
-ggplot(impGDPUpdated, aes(x = fct_reorder(country_1, order), y = scenario, fill = gdpPercImp)) +
+ggplot(impGDPUpdated, aes(x = fct_reorder(country_2, order), y = scenario, fill = gdpPercImp)) +
     geom_tile() +
     theme_classic() +
     # geom_text(aes(label = scales::number(gdpPercImp*100, accuracy = 1), color = gdpPercImp)) +
     theme(axis.text.x = element_text()) +
     scale_fill_gradient(low = "white" ,high = "#061c2b", labels = scales::percent) +
+    # theme(axis.text.x = element_text(angle = 30, vjust = 0.6)) +
     scale_color_gradient(high = "white" ,low = "#061c2b") +
     labs(fill = "Impacted GDP")
 
